#775 Added a visible grip so that people know you can drag pulls around. Properly fixed dragging/selecting by using the intended distance feature of the library.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -314,6 +314,12 @@ html, body, #map, #app, .wrapper {
     cursor: pointer;
 }
 
+#pulls_sidebar .map_killzonessidebar_floor_switch,
+#pulls_sidebar .map_killzonessidebar_killzone .grip {
+    cursor: move;
+    font-size: 1.2em;
+}
+
 #pulls_sidebar .map_killzonessidebar_color_btn {
     cursor: pointer;
 }
